--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   shared_preferences: ^0.5.1+1
+  provider: ^3.0.0+1
+  flukit: ^1.0.2
+  cached_network_image: ^0.8.0
+  fluttertoast: ^3.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -30,6 +34,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_model: ^0.0.2
+  intl_translation: ^0.17.4
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
 
 
 # For information on the generic Dart part of this file, see the
